# twitter_desaster

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
analysis/: analysis_pytorch.ipynb  create_training_data_fasttext.ipynb  disaster_analysis.ipynb  test_fasttext.ipynb  train_fasttext.ipynb
app/: main.py
app/train/: train.py
data/: fasttext_tweet_disaster_text_base.train  fasttext_tweet_disaster_text_base_submission.csv  fasttext_tweet_disaster_text_keyword.train  fasttext_tweet_disaster_text_keyword_location.valid  fasttext_tweet_disaster_text_keyword_location_submission.csv  fasttext_tweet_disaster_text_keyword_submission.csv  fasttext_tweet_disaster_text_location.train  fasttext_tweet_disaster_text_location_submission.csv  train_fasttext.train  train_fasttext.valid
