[tool.poetry]
name = "twitter-disaster"
version = "0.1.0"
description = "predicting actual desasters from tweets"
authors = ["Kolja Hopfmann <k.hopfmann@hotmail.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "twitter_disaster"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"
fasttext = "0.9.2"
pandas = "^2.0.2"
sklearn = "^0.0.post5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
